@@ -5,7 +5,7 @@
 #include "RFXNames.h"
 
 //Base class with functions all notification systems should have
-#define RX_BUFFER_SIZE 40
+#define RX_BUFFER_SIZE 60
 
 class CDomoticzHardwareBase
 {
